--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Inventario
+spring.datasource.url=jdbc:mysql://localhost:3306/db_inventory?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=manlabproy2@@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
